--- a/force-app/main/default/classes/AccountController.cls
+++ b/force-app/main/default/classes/AccountController.cls
@@ -5,7 +5,7 @@ public with sharing class AccountController {
     @AuraEnabled(cacheable=true)
     public static List<Account> getAccounts(){
         try {
-            return [select id,name,type,industry from Account limit 10];
+            return [select id,name,type,industry,email from Account limit 10];
         } catch (Exception e) {
             throw new AuraHandledException(e.getMessage());
         }
